--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "^3.0",
         "predis/predis": "^1.1",
+        "socialiteproviders/weixin": "^4.0",
         "yansongda/pay": "^2.4"
     },
     "require-dev": {
