--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "overtrue/laravel-lang": "^3.0",
         "predis/predis": "^1.1",
         "socialiteproviders/weixin": "^4.0",
+        "tymon/jwt-auth": "1.0.0-rc.2",
         "yansongda/pay": "^2.4"
     },
     "require-dev": {
