--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "endroid/qr-code": "^3.4",
         "fideloper/proxy": "~3.3",
         "gregwar/captcha": "^1.1",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "liyu/dingo-serializer-switch": "^0.3.0",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "^3.0",
         "predis/predis": "^1.1",
